--- a/.github/workflows/phpcsfixer.yml
+++ b/.github/workflows/phpcsfixer.yml
@@ -26,6 +26,7 @@ jobs:
           echo boolean_output=${{ needs.filesChanged.outputs.boolean_output }}
           echo github.head_ref=${{github.head_ref}}
           echo github.base_ref=${{github.base_ref}}
+          echo github.ref_name=${{github.ref_name}}
       - uses: eldy/phpcsfixer-action@master
         with:
           github_token: ${{ secrets.github_token }}
@@ -33,6 +34,7 @@ jobs:
           phpcs_standard: 'dev/setup/codesniffer/ruleset.xml'
           phpcs_head_ref: ${{github.head_ref}}
           phpcs_base_ref: ${{github.base_ref}}
+          phpcs_ref_name: ${{github.ref_name}}
           phpcs_files: ${{ needs.filesChanged.outputs.all_changed_files }}
           phpcs_args: '-n -s --extensions=php --colors --tab-width=4 --encoding=utf-8 --runtime-set ignore_warnings_on_exit true .'
       #- uses: stefanzweifel/git-auto-commit-action@v4 # auto commit the fixes action for GitHub
