--- a/.github/workflows/phpcsfixer.yml
+++ b/.github/workflows/phpcsfixer.yml
@@ -7,26 +7,28 @@ on: push
 #    - '**.php'
 
 jobs:
-  filesChanged:
-    uses: ./.github/workflows/files_changed.yaml
-    with:
-      folder_path: .*
+  #filesChanged:
+  #  uses: ./.github/workflows/files_changed.yaml
+  #  with:
+  #    folder_path: .*
       
   linter_name:
     name: Run & fix PHP Code Sniffer
     runs-on: ubuntu-latest
-    needs: filesChanged
+    #needs: filesChanged
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 10
+
       - name: echo Get list of all changed files
         run: |
-          echo ${{ needs.filesChanged.outputs.all_changed_files }} 
-          echo boolean_output=${{ needs.filesChanged.outputs.boolean_output }}
+          #echo ${{ needs.filesChanged.outputs.all_changed_files }} 
+          #echo boolean_output=${{ needs.filesChanged.outputs.boolean_output }}
           echo github.head_ref=${{github.head_ref}}
           echo github.base_ref=${{github.base_ref}}
           echo github.ref_name=${{github.ref_name}}
+
       - uses: eldy/phpcsfixer-action@master
         with:
           github_token: ${{ secrets.github_token }}
@@ -35,8 +37,8 @@ jobs:
           phpcs_head_ref: ${{github.head_ref}}
           phpcs_base_ref: ${{github.base_ref}}
           phpcs_ref_name: ${{github.ref_name}}
+          phpcs_github_event_name: ${{github.event_name}}
           phpcs_files: ${{ needs.filesChanged.outputs.all_changed_files }}
-          phpcs_args: '-n -s --extensions=php --colors --tab-width=4 --encoding=utf-8 --runtime-set ignore_warnings_on_exit true .'
       #- uses: stefanzweifel/git-auto-commit-action@v4 # auto commit the fixes action for GitHub
       #  with:
       #    commit_message: Fix PHPCS errors
