--- a/.github/workflows/phpcsfixer.yml
+++ b/.github/workflows/phpcsfixer.yml
@@ -43,6 +43,20 @@ jobs:
           phpcs_ref_name: ${{github.ref_name}}
           phpcs_github_event_name: ${{github.event_name}}
           phpcs_files: ${{ needs.filesChanged.outputs.all_changed_files }}
+
       #- uses: stefanzweifel/git-auto-commit-action@v4 # auto commit the fixes action for GitHub
       #  with:
       #    commit_message: Fix PHPCS errors by GitHub PHPCSfixer action
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9.1.3
+        with:
+          default_author: github_actions
+          committer_name: GitHub Actions
+          committer_email: actions@github.com
+          #author_name: PHP CS fixer
+          #author_email: eldy@destailleur.fr
+          #committer_name: PHP CS fixer
+          #committer_email: eldy@destailleur.fr
+          message: 'PHP CS fixer github action'
+          add: '*.php'
