Fix composer file to allow to install sparin/swiss-qr-bill

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ doc/install.lock
 .idea/workspace.xml
 .idea/inspectionProfiles/Project_Default.xml
 .idea/jsLinters/jshint.xml
+/composer.json
+/composer.lock
