--- a/.travis.yml
+++ b/.travis.yml
@@ -374,8 +374,8 @@ script:
   
   - |
     echo "Upgrading Dolibarr"
-    # Ensure we catch errors. Set this to +e if you want to go to the end to see log files.
-    set +e
+    # Ensure we catch errors with -e. Set this to +e if you want to go to the end to see log files.
+    set -e
     cd htdocs/install
     php upgrade.php 3.5.0 3.6.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade350360.log
     php upgrade2.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-2.log
@@ -460,8 +460,8 @@ script:
 
   - |
     echo "Unit testing"
-    # Ensure we catch errors. Set this to +e instead of -e if you want to go to the end to see dolibarr.log file.
-    set +e
+    # Ensure we catch errors with -e. Set this to +e instead of -e if you want to go to the end to see dolibarr.log file.
+    set -e
     phpunit -d memory_limit=-1 -c test/phpunit/phpunittest.xml test/phpunit/AllTests.php
     phpunitresult=$?
     echo "Phpunit return code = $phpunitresult"
