--- a/.github/workflows/exakat.yml
+++ b/.github/workflows/exakat.yml
@@ -3,7 +3,7 @@ name: "Exakat analysis"
 
 on:
   schedule:
-  - cron: "0 20 * * *"
+  - cron: "0 20 1 * *"
   workflow_dispatch:
     branches:
       - develop
