--- a/phpstan.neon
+++ b/phpstan.neon
@@ -48,7 +48,7 @@ parameters:
 		- '#Undefined variable: \$error#'
 		- '#Undefined variable: \$errors#'
 		- '#Undefined variable: \$form#'
-		- '#Caught class Stripe#
+		- '#Caught class Stripe#'
 	internalErrorsCountLimit: 50
 	cache:
 	    nodesByFileCountMax: 512
