--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,6 @@ package-lock.json
 doc/install.lock
 /.asciidoctorconfig.adoc
 
-# Qodana
-.idea/vcs.xml
-.idea/modules.xml
-.idea/workspace.xml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/jsLinters/jshint.xml
+.idea
 /composer.json
 /composer.lock
