--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ dist: focal
 
 language: generic
 
-scan_logs: false
+#scan_logs: false
 
 git:
   depth: 1
@@ -441,6 +441,7 @@ script:
     php upgrade.php 18.0.0 19.0.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade18001900.log || cat $TRAVIS_BUILD_DIR/upgrade18001900.log
     php upgrade2.php 18.0.0 19.0.0 > $TRAVIS_BUILD_DIR/upgrade18001900-2.log || cat $TRAVIS_BUILD_DIR/upgrade18001900-2.log
     php step5.php 18.0.0 19.0.0 > $TRAVIS_BUILD_DIR/upgrade18001900-3.log || cat $TRAVIS_BUILD_DIR/upgrade18001900-3.log
+    set -e
 
   - |
     echo Show some debug info like table content or log
@@ -450,7 +451,7 @@ script:
   - |
     echo Result of migration scripts
     ls -alrt $TRAVIS_BUILD_DIR/
-        
+
     echo Show content of last file
     cat $TRAVIS_BUILD_DIR/"$(ls -rt $TRAVIS_BUILD_DIR/ | tail -n1)"
 
@@ -473,7 +474,7 @@ script:
   - |
     echo "Unit testing"
     # Ensure we catch errors with -e. Set this to +e instead of -e if you want to go to the end to see dolibarr.log file.
-    set -e
+    set +e
     phpunit -d memory_limit=-1 -c test/phpunit/phpunittest.xml test/phpunit/AllTests.php
     phpunitresult=$?
     echo "Phpunit return code = $phpunitresult"
